+ features
* bugfixes

0.9.22 -> 0.9.23
 + Improved hedgehog spawns on maps that lack land mass or free space
 + Highlander mode displays game scheme specifics (mines timer, etc.) in ESC info
 + AI hedgehogs know how to use Bee now
 + Small visual effects enhancements
 * Video recording functionality is restored
 * Gameplay fix: Hammer damage is now rounded down. This means it will cause NO DAMAGE to a hedgehog with less than 3 hp.
 * Fixed bee not being affected by wrap world edge while still being thrown
 * Fixed turn not ending when sticky mine was trapped on rubberband
 * Fixed screenshots being too bright if taken in quick succession
 * Fixed hog-speech missing a response type (Justyouwait/"You're gonna pay for that") on some platforms (e.g. Linux)
 * Various other fixes

Lua-API:
 + New call: SetCinematicMode(enable) -- e.g. for cutscenes etc.

0.9.21 -> 0.9.22
 + New Weapon / Map object: AirMine (floating mine that will follow nearby hedgehogs)
 + Extensive changes to TechRacer: Variable terrain types, enhanced parameters, hwmap interpreter, fuel limiter, etc. 
 + HedgeEditor - create missions/etc. in-game! see http://hedgewars.org/HedgeEditor
 + Map previews can now take script parameters into account and preview waypoints in TechRacer
 + Added a couple new flags
 + Various tweaks to the interface and in-game chat
 + Divided teams options will now just be ignored when more/less than 2 teams/clans, instead of displaying a fatal error
 + Added 6 TechRacer maps to TechMaps
 + Added 3 SpeedShoppa Challenges: Shoppa Love, Ropes and Crates, The Customer is King
 + Hammer damage is now rounded up. This means it can be used to execute hedgehogs with only 1 hp.
 + Improved "Art" theme.
 * Generated bridges/girders are now connected better to the land mass
 * Fixed rubberband sprite
 * Fixed Wind-Indicator being wrong in certain situations
 * Melon Bomb Pieces now bounce on Rubberband
 * Reduced menu music volume